fix(docs): fix some error

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -11,6 +11,9 @@ const char *ssid = "name"; // Enter your WiFi name
 const char *password = "pass";  // Enter WiFi password
 const char *mqtt_broker = "broker.emqx.io";
 const int mqtt_port = 1883;
+const char *topic = "/esp8266/emqx";
+const char *mqtt_username = "emqx";
+const char *mqtt_password = "public";
 
 WiFiClient espClient;
 PubSubClient client(espClient);
@@ -28,9 +31,12 @@ void setup() {
     //connecting to a mqtt broker
     client.setServer(mqtt_broker, mqtt_port);
     client.setCallback(callback);
+    //connecting to a mqtt broker
     while (!client.connected()) {
+        String client_id = "esp8266-client-";
+        client_id += String(WiFi.macAddress());
         Serial.println("Connecting to public emqx mqtt broker.....");
-        if (client.connect("esp8266-client")) {
+        if (client.connect(client_id, mqttUsername, mqttPassword)) {
             Serial.println("Public emqx mqtt broker connected");
         } else {
             Serial.print("failed with state ");
@@ -39,8 +45,8 @@ void setup() {
         }
     }
     // publish and subscribe
-    client.publish("esp8266/test", "hello emqx");
-    client.subscribe("esp8266/test");
+    client.publish(topic, "hello emqx");
+    client.subscribe(topic);
 }
 
 void callback(char *topic, byte *payload, unsigned int length) {
