feat(directory): modify zh document directory structure

--- a/zh_CN/connect_to_deployments/esp8266.md
+++ b/zh_CN/connect_to_deployments/esp8266.md
@@ -8,13 +8,16 @@ ESP8266 通过使用 Arduino 的 PubSubClient 库，使用 MQTT 协议向 EMQ X 
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
 
-const char *ssid = "name"; // Enter your WiFi name
-const char *password = "pass";  // Enter WiFi password
+// WiFi
+const char *ssid = "mousse"; // Enter your WiFi name
+const char *password = "test";  // Enter WiFi password
+
+// MQTT Broker
 const char *mqtt_broker = "broker.emqx.io";
-const int mqtt_port = 1883;
-const char *topic = "/esp8266/emqx";
+const char *topic = "esp8266/test";
 const char *mqtt_username = "emqx";
 const char *mqtt_password = "public";
+const int mqtt_port = 1883;
 
 WiFiClient espClient;
 PubSubClient client(espClient);
@@ -32,12 +35,11 @@ void setup() {
     //connecting to a mqtt broker
     client.setServer(mqtt_broker, mqtt_port);
     client.setCallback(callback);
-    //connecting to a mqtt broker
     while (!client.connected()) {
         String client_id = "esp8266-client-";
         client_id += String(WiFi.macAddress());
-        Serial.println("Connecting to public emqx mqtt broker.....");
-        if (client.connect(client_id, mqttUsername, mqttPassword)) {
+        Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
+        if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
             Serial.println("Public emqx mqtt broker connected");
         } else {
             Serial.print("failed with state ");
