fix(docs): fix more format stuff

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -1,4 +1,4 @@
-# Connect to deployments with ESP8266
+# Connect to Deployments with ESP8266
 ESP8266 push data to EMQ X Cloud via MQTT protocol by using PubSubClient library for Arduino. The application that is running on ESP8266 is written using Arduino SDK which is quite simple and easy to understand.
 
 
