fix(docs): fix suffix and esp8266
fix(docs): fix suffix and esp8266

--- a/zh_CN/connect_to_deployments/esp8266.md
+++ b/zh_CN/connect_to_deployments/esp8266.md
@@ -1,4 +1,4 @@
-# 使用 ESP8266 连接到部署
+# ESP8266 连接
 
 ESP8266 通过使用 Arduino 的 PubSubClient 库，使用 MQTT 协议向 EMQ X Cloud 推送数据。在 ESP8266 上运行的应用程序是使用 Arduino SDK编写的，非常简单易懂。
 
@@ -10,7 +10,7 @@ ESP8266 通过使用 Arduino 的 PubSubClient 库，使用 MQTT 协议向 EMQ X 
 
 // WiFi
 const char *ssid = "mousse"; // Enter your WiFi name
-const char *password = "test";  // Enter WiFi password
+const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
 const char *mqtt_broker = "broker.emqx.io";
@@ -23,50 +23,53 @@ WiFiClient espClient;
 PubSubClient client(espClient);
 
 void setup() {
-    // Set software serial baud to 115200;
-    Serial.begin(115200);
-    // connecting to a WiFi network
-    WiFi.begin(ssid, password);
-    while (WiFi.status() != WL_CONNECTED) {
-        delay(500);
-        Serial.println("Connecting to WiFi..");
-    }
-    Serial.println("Connected to the WiFi network");
-    //connecting to a mqtt broker
-    client.setServer(mqtt_broker, mqtt_port);
-    client.setCallback(callback);
-    while (!client.connected()) {
-        String client_id = "esp8266-client-";
-        client_id += String(WiFi.macAddress());
-        Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
-        if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
-            Serial.println("Public emqx mqtt broker connected");
-        } else {
-            Serial.print("failed with state ");
-            Serial.print(client.state());
-            delay(2000);
-        }
-    }
-    // publish and subscribe
-    client.publish(topic, "hello emqx");
-    client.subscribe(topic);
+ // Set software serial baud to 115200;
+ Serial.begin(115200);
+ // connecting to a WiFi network
+ WiFi.begin(ssid, password);
+ while (WiFi.status() != WL_CONNECTED) {
+     delay(500);
+     Serial.println("Connecting to WiFi..");
+ }
+ Serial.println("Connected to the WiFi network");
+ //connecting to a mqtt broker
+ client.setServer(mqtt_broker, mqtt_port);
+ client.setCallback(callback);
+ while (!client.connected()) {
+     String client_id = "esp8266-client-";
+     client_id += String(WiFi.macAddress());
+     Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
+     if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+         Serial.println("Public emqx mqtt broker connected");
+     } else {
+         Serial.print("failed with state ");
+         Serial.print(client.state());
+         delay(2000);
+     }
+ }
+ // publish and subscribe
+ client.publish(topic, "hello emqx");
+ client.subscribe(topic);
 }
 
 void callback(char *topic, byte *payload, unsigned int length) {
-    Serial.print("Message arrived in topic: ");
-    Serial.println(topic);
-    Serial.print("Message:");
-    for (int i = 0; i < length; i++) {
-        Serial.print((char) payload[i]);
-    }
-    Serial.println();
-    Serial.println("-----------------------");
+ Serial.print("Message arrived in topic: ");
+ Serial.println(topic);
+ Serial.print("Message:");
+ for (int i = 0; i < length; i++) {
+     Serial.print((char) payload[i]);
+ }
+ Serial.println();
+ Serial.println("-----------------------");
 }
 
 void loop() {
-    client.loop();
+ client.loop();
 }
 ```
 
 ## Other
 [ESP8266 连接到免费的公共 MQTT 服务器](https://www.emqx.cn/blog/esp8266-connects-to-the-public-mqtt-broker)
+[ESP8266 + MQTT ：如何实现 LED 灯的远程控制](https://www.emqx.cn/blog/esp8266_mqtt_led)
+[通过 NodeMCU (ESP8266) 将传感器数据上传至 MQTT 云服务](https://www.emqx.cn/blog/upload-sensor-data-to-mqtt-cloud-service-via-nodemcu-esp8266)
+
