--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -1,4 +1,4 @@
-# Connect to Deployments with ESP8266
+# ESP8266 Connection
 ESP8266 push data to EMQ X Cloud via MQTT protocol by using PubSubClient library for Arduino. The application that is running on ESP8266 is written using Arduino SDK which is quite simple and easy to understand.
 
 
@@ -7,63 +7,67 @@ ESP8266 push data to EMQ X Cloud via MQTT protocol by using PubSubClient library
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
 
-const char *ssid = "name"; // Enter your WiFi name
-const char *password = "pass";  // Enter WiFi password
+// WiFi
+const char *ssid = "mousse"; // Enter your WiFi name
+const char *password = "qweqweqwe";  // Enter WiFi password
+
+// MQTT Broker
 const char *mqtt_broker = "broker.emqx.io";
-const int mqtt_port = 1883;
-const char *topic = "/esp8266/emqx";
+const char *topic = "esp8266/test";
 const char *mqtt_username = "emqx";
 const char *mqtt_password = "public";
+const int mqtt_port = 1883;
 
 WiFiClient espClient;
 PubSubClient client(espClient);
 
 void setup() {
-    // Set software serial baud to 115200;
-    Serial.begin(115200);
-    // connecting to a WiFi network
-    WiFi.begin(ssid, password);
-    while (WiFi.status() != WL_CONNECTED) {
-        delay(500);
-        Serial.println("Connecting to WiFi..");
-    }
-    Serial.println("Connected to the WiFi network");
-    //connecting to a mqtt broker
-    client.setServer(mqtt_broker, mqtt_port);
-    client.setCallback(callback);
-    //connecting to a mqtt broker
-    while (!client.connected()) {
-        String client_id = "esp8266-client-";
-        client_id += String(WiFi.macAddress());
-        Serial.println("Connecting to public emqx mqtt broker.....");
-        if (client.connect(client_id, mqttUsername, mqttPassword)) {
-            Serial.println("Public emqx mqtt broker connected");
-        } else {
-            Serial.print("failed with state ");
-            Serial.print(client.state());
-            delay(2000);
-        }
-    }
-    // publish and subscribe
-    client.publish(topic, "hello emqx");
-    client.subscribe(topic);
+ // Set software serial baud to 115200;
+ Serial.begin(115200);
+ // connecting to a WiFi network
+ WiFi.begin(ssid, password);
+ while (WiFi.status() != WL_CONNECTED) {
+     delay(500);
+     Serial.println("Connecting to WiFi..");
+ }
+ Serial.println("Connected to the WiFi network");
+ //connecting to a mqtt broker
+ client.setServer(mqtt_broker, mqtt_port);
+ client.setCallback(callback);
+ while (!client.connected()) {
+     String client_id = "esp8266-client-";
+     client_id += String(WiFi.macAddress());
+     Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
+     if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+         Serial.println("Public emqx mqtt broker connected");
+     } else {
+         Serial.print("failed with state ");
+         Serial.print(client.state());
+         delay(2000);
+     }
+ }
+ // publish and subscribe
+ client.publish(topic, "hello emqx");
+ client.subscribe(topic);
 }
 
 void callback(char *topic, byte *payload, unsigned int length) {
-    Serial.print("Message arrived in topic: ");
-    Serial.println(topic);
-    Serial.print("Message:");
-    for (int i = 0; i < length; i++) {
-        Serial.print((char) payload[i]);
-    }
-    Serial.println();
-    Serial.println("-----------------------");
+ Serial.print("Message arrived in topic: ");
+ Serial.println(topic);
+ Serial.print("Message:");
+ for (int i = 0; i < length; i++) {
+     Serial.print((char) payload[i]);
+ }
+ Serial.println();
+ Serial.println("-----------------------");
 }
 
 void loop() {
-    client.loop();
+ client.loop();
 }
 ```
 
 ## Other
 [ESP8266 connects to the free public MQTT broker](https://www.emqx.io/blog/esp8266-connects-to-the-public-mqtt-broker)
+[Remote control LED with ESP8266 and MQTT](https://www.emqx.io/blog/esp8266_mqtt_led)
+[Upload sensor data to MQTT cloud service via NodeMCU (ESP8266)](https://www.emqx.io/blog/upload-sensor-data-to-mqtt-cloud-service-via-nodemcu-esp8266)
