feat(esp): modify esp related articles

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -1,8 +1,126 @@
-# ESP8266 Connection
-ESP8266 push data to EMQ X Cloud via MQTT protocol by using PubSubClient library for Arduino. The application that is running on ESP8266 is written using Arduino SDK which is quite simple and easy to understand.
+# Connect to the Deployment using ESP8266
 
+This article mainly introduces how to use `PubSubClient` in the ESP8266 project, and implement the connection, subscription, messaging, unsubscribing and other functions between the client and MQTT broker.
 
-## Example Code
+[ESP8266](https://www.espressif.com/en/products/modules/esp8266) provides a highly integrated Wi-Fi SoC solution. Its low-power, compact design, and high stability can meet user's requirements. ESP8266 has a complete and self-contained Wi-Fi network function, which can be applied independently or can run as a slave at another host MCU.
+
+[MQTT](https://www.emqx.com/en/mqtt) is a kind of **lightweight IoT messaging protocol** based on the publish/subscribe model. This protocol provides one-to-many message distribution and decoupling of applications. It has several advantages which are low transmission consumption and protocol data exchange, minimized network traffic, three different service quality levels of message which can meet different delivery needs.
+
+## Preconditions
+
+> 1.  The deployment has been created. You can view connection-related information under [Deployment Overview](../deployments/view_deployment.md). Please make sure that the deployment status is running. At the same time, you can use WebSocket to test the connection to the MQTT server.
+> 2.  Set the user name and password in `Authentication & ACL` > `Authentication` for connection verification.
+
+This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the code editor and uploader. The open-source Arduino Software (IDE) makes it easy to write code and upload it to the board. This software can be used with any Arduino board.
+
+## Install dependencies
+
+1. Install ESP8266 development board
+   Click Tools -> Development Board -> Development Board Management -> Search ESP8266 -> Install
+2. Install PubSub client
+   Project -> Load library -> Library manager... -> Search PubSubClient -> Install PubSubClient by Nick O’Leary
+
+## Connection
+
+> Please find the relevant address and port information in the [Deployment Overview](../deployments/view_deployment.md) of the Console. Please note that if it is the basic edition, the port is not 1883 or 8883, please confirm the port.
+
+### Connection settings
+
+This article will use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQ X. This service was created based on the [EMQ X Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
+
+- Broker: **broker.emqx.io**
+- TCP Port: **1883**
+- Websocket Port: **8083**
+
+### Firstly, we import libraries ESP8266WiFi and PubSubClient.
+
+```c
+#include <ESP8266WiFi.h>
+#include <PubSubClient.h>
+```
+
+### Set Wi-Fi name and password, and connection address and port of MQTT broker
+
+```c
+// WiFi
+const char *ssid = "mousse"; // Enter your WiFi name
+const char *password = "qweqweqwe";  // Enter WiFi password
+
+// MQTT Broker
+const char *mqtt_broker = "broker.emqx.io";
+const char *topic = "esp8266/test";
+const char *mqtt_username = "emqx";
+const char *mqtt_password = "public";
+const int mqtt_port = 1883;
+```
+
+### Open a serial connection for facilitating to output of the result of the program and connecting to the Wi-Fi network.
+
+```c
+// Set software serial baud to 115200;
+Serial.begin(115200);
+// connecting to a WiFi network
+WiFi.begin(ssid, password);
+while (WiFi.status() != WL_CONNECTED) {
+    delay(500);
+    Serial.println("Connecting to WiFi..");
+}
+```
+
+### Set MQTT broker, write callback function, and print connection information on the serial monitor at the same time.
+
+```c
+client.setServer(mqtt_broker, mqtt_port);
+client.setCallback(callback);
+while (!client.connected()) {
+    String client_id = "esp8266-client-";
+    client_id += String(WiFi.macAddress());
+    Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
+    if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+    } else {
+        Serial.print("failed with state ");
+        Serial.print(client.state());
+        delay(2000);
+    }
+}
+
+void callback(char *topic, byte *payload, unsigned int length) {
+    Serial.print("Message arrived in topic: ");
+    Serial.println(topic);
+    Serial.print("Message:");
+    for (int i = 0; i < length; i++) {
+        Serial.print((char) payload[i]);
+    }
+    Serial.println();
+    Serial.println("-----------------------");
+}
+```
+
+### After successfully connecting to the MQTT broker, ESP8266 will publish messages and subscribe to the MQTT broker.
+
+```c
+// publish and subscribe
+client.publish(topic, "hello emqx");
+client.subscribe(topic);
+```
+
+### Printing the topic name to the serial port and then print every byte of received messages.
+
+```c
+void callback(char *topic, byte *payload, unsigned int length) {
+    Serial.print("Message arrived in topic: ");
+    Serial.println(topic);
+    Serial.print("Message:");
+    for (int i = 0; i < length; i++) {
+        Serial.print((char) payload[i]);
+    }
+    Serial.println();
+    Serial.println("-----------------------");
+}
+```
+
+### The full code
+
 ```c
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
@@ -22,52 +140,60 @@ WiFiClient espClient;
 PubSubClient client(espClient);
 
 void setup() {
- // Set software serial baud to 115200;
- Serial.begin(115200);
- // connecting to a WiFi network
- WiFi.begin(ssid, password);
- while (WiFi.status() != WL_CONNECTED) {
-     delay(500);
-     Serial.println("Connecting to WiFi..");
- }
- Serial.println("Connected to the WiFi network");
- //connecting to a mqtt broker
- client.setServer(mqtt_broker, mqtt_port);
- client.setCallback(callback);
- while (!client.connected()) {
-     String client_id = "esp8266-client-";
-     client_id += String(WiFi.macAddress());
-     Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
-     if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
-         Serial.println("Public emqx mqtt broker connected");
-     } else {
-         Serial.print("failed with state ");
-         Serial.print(client.state());
-         delay(2000);
-     }
- }
- // publish and subscribe
- client.publish(topic, "hello emqx");
- client.subscribe(topic);
+  // Set software serial baud to 115200;
+  Serial.begin(115200);
+  // connecting to a WiFi network
+  WiFi.begin(ssid, password);
+  while (WiFi.status() != WL_CONNECTED) {
+      delay(500);
+      Serial.println("Connecting to WiFi..");
+  }
+  Serial.println("Connected to the WiFi network");
+  //connecting to a mqtt broker
+  client.setServer(mqtt_broker, mqtt_port);
+  client.setCallback(callback);
+  while (!client.connected()) {
+      String client_id = "esp8266-client-";
+      client_id += String(WiFi.macAddress());
+      Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
+      if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+          Serial.println("Public emqx mqtt broker connected");
+      } else {
+          Serial.print("failed with state ");
+          Serial.print(client.state());
+          delay(2000);
+      }
+  }
+  // publish and subscribe
+  client.publish(topic, "hello emqx");
+  client.subscribe(topic);
 }
 
 void callback(char *topic, byte *payload, unsigned int length) {
- Serial.print("Message arrived in topic: ");
- Serial.println(topic);
- Serial.print("Message:");
- for (int i = 0; i < length; i++) {
-     Serial.print((char) payload[i]);
- }
- Serial.println();
- Serial.println("-----------------------");
+  Serial.print("Message arrived in topic: ");
+  Serial.println(topic);
+  Serial.print("Message:");
+  for (int i = 0; i < length; i++) {
+      Serial.print((char) payload[i]);
+  }
+  Serial.println();
+  Serial.println("-----------------------");
 }
 
 void loop() {
- client.loop();
+  client.loop();
 }
 ```
 
-## Other
-[ESP8266 connects to the free public MQTT broker](https://www.emqx.com/en/blog/esp8266-connects-to-the-public-mqtt-broker)
-[Remote control LED with ESP8266 and MQTT](https://www.emqx.com/en/blog/esp8266_mqtt_led)
-[Upload sensor data to MQTT cloud service via NodeMCU (ESP8266)](https://www.emqx.com/en/blog/upload-sensor-data-to-mqtt-cloud-service-via-nodemcu-esp8266)
+## Test
+
+1. Please use Arduino IDE to upload the complete code to ESP8266 and open the serial monitor
+   ![esp8266_connection](./_assets/esp8266_connection.png)
+2. Establish the connection between MQTT X client and MQTT broker, and send messages to ESP8266
+   ![esp8266_mqttx](./_assets/esp8266_mqttx.png)
+3. View the messages ESP8266 received in the serial monitor
+   ![esp8266_receive](./_assets/esp8266_receive.png)
+
+## More
+
+In summary, we have implemented the creation of an MQTT connection in a ESP8266 project, simulated subscribing, sending and receiving messages, unsubscribing, and disconnecting between the client and MQTT broker. You can download the source code of the example [here](https://github.com/emqx/MQTT-Client-Examples/tree/master/mqtt-client-ESP8266), and you can also find more demo examples in other languages on [GitHub](https://github.com/emqx/MQTT-Client-Examples).
