fix(conn): fix some en translations & delete introduction.md

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -1,4 +1,4 @@
-# Connect to the Deployment using ESP8266
+# Connect to the Deployment with ESP8266
 
 This article mainly introduces how to use `PubSubClient` in the ESP8266 project, and implement the connection, subscription, messaging, unsubscribing and other functions between the client and MQTT broker.
 
@@ -30,7 +30,7 @@ This article will use the [free public MQTT broker](https://www.emqx.com/en/mqtt
 
 - Broker: **broker.emqx.io**
 - TCP Port: **1883**
-- Websocket Port: **8083**
+- WebSocket Port: **8083**
 
 ### Firstly, we import libraries ESP8266WiFi and PubSubClient.
 
