directory check english

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -8,7 +8,7 @@ This article mainly introduces how to use `PubSubClient` in the ESP8266 project,
 
 ## Preconditions
 
-> 1.  The deployment has been created. You can view connection-related information under [Deployment Overview](../deployments/view_deployment.md). Please make sure that the deployment status is running. At the same time, you can use WebSocket to test the connection to the MQTT server.
+> 1.  The deployment has been created. You can view connection-related information under Deployment Overview. Please make sure that the deployment status is running. At the same time, you can use WebSocket to test the connection to the MQTT server.
 > 2.  Set the user name and password in `Authentication & ACL` > `Authentication` for connection verification.
 
 This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the code editor and uploader. The open-source Arduino Software (IDE) makes it easy to write code and upload it to the board. This software can be used with any Arduino board.
@@ -22,7 +22,7 @@ This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the c
 
 ## Connection
 
-> Please find the relevant address and port information in the [Deployment Overview](../deployments/view_deployment.md) of the Console. Please note that if it is the basic edition, the port is not 1883 or 8883, please confirm the port.
+> Please find the relevant address and port information in the Deployment Overview of the Console. Please note that if it is the basic edition, the port is not 1883 or 8883, please confirm the port.
 
 ### Connection settings
 
