--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -27,7 +27,7 @@ This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the c
 
 This article will use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
 
-- Broker: **broker-cn.emqx.io**
+- Broker: **broker.emqx.io**
 - TCP Port: **1883**
 - SSL/TLS Port: **8883**
 
@@ -55,7 +55,7 @@ const char *ssid = "mousse"; // Enter your WiFi name
 const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
-const char *mqtt_broker = "broker-cn.emqx.io"; // broker address
+const char *mqtt_broker = "broker.emqx.io"; // broker address
 const char *topic = "esp8266/test"; // define topic 
 const char *mqtt_username = "emqx"; // username for authentication
 const char *mqtt_password = "public"; // password for authentication
@@ -127,7 +127,7 @@ const char *ssid = "mousse"; // Enter your WiFi name
 const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
-const char *mqtt_broker = "broker-cn.emqx.io"; // broker address
+const char *mqtt_broker = "broker.emqx.io"; // broker address
 const char *topic = "esp8266/test"; // define topic 
 const char *mqtt_username = "emqx"; // username for authentication
 const char *mqtt_password = "public"; // password for authentication
@@ -203,7 +203,7 @@ const char *ssid = "mousse"; // Enter your WiFi name
 const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
-const char *mqtt_broker = "broker-cn.emqx.io"; // broker address
+const char *mqtt_broker = "broker.emqx.io"; // broker address
 const char *topic = "esp8266/test"; // define topic 
 const char *mqtt_username = "emqx"; // username for authentication
 const char *mqtt_password = "public"; // password for authentication
@@ -314,7 +314,7 @@ const char *ssid = "mousse"; // Enter your WiFi name
 const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
-const char *mqtt_broker = "broker-cn.emqx.io"; // broker address
+const char *mqtt_broker = "broker.emqx.io"; // broker address
 const char *topic = "esp8266/test"; // define topic 
 const char *mqtt_username = "emqx"; // username for authentication
 const char *mqtt_password = "public"; // password for authentication
